Add MPSC concurrency verification
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>